# mini-triton-backend-rs

./: .gitignore  Cargo.toml  Dockerfile  README  README.md  build.rs  docker-compose.yml  process_header.py  temp.rs  tritonbackend.h  tritonserver.h
mini-backend/: Cargo.toml  Dockerfile  README.md  docker-compose.yml  infer_request.jl  julia_wrappers2.rs  model.jl  types.jl
mini-backend/src/: lib.rs
mini-backend/src/triton/backend/: minimal.rs  mod.rs
mini-backend/src/triton/backend/julia/: infer_request.rs  infer_request.rs.bak  infer_request.rs.bakup  infer_response.rs  jb_error.rs  jb_exception.rs  jb_stub_utils.rs  jb_tensor.rs  julia_be.rs  julia_module_wrapper.rs  julia_wrappers.rs  julia_wrappers.rs.bak  mod.rs
src/: bindings.rs  lib.rs  tritonbackend.h  tritonbackend.h.txt  tritonserver.h  wrapper.rs
triton_backend_sys/: Cargo.toml  build.rs
triton_backend_sys/src/: bindings.rs  lib.rs  tritonbackend.h
triton_backend_sys/src/util/sys/: backend_input_collector.rs  mod.rs
triton_backend_sys/src/wrapper/: mod.rs
